# scrubbed

./: .gitignore  .releaserc  Containerfile  Dockerfile  Dockerfile.signalilo  Makefile  README.md  ct.yaml  environment.md  go.mod  go.sum  initenv.sh  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  scrubbed.go  scrubbed.py  scrubbed_test.go  server.py  test.hurl
.github/: dependabot.yml
.github/workflows/: chart.yaml  release-container-image-standalone.yaml  release-container-image-with-signalilo.yaml  release-container-image.yaml  security.yaml  semantic-release.yaml  test.yaml  verify.yml
deploy/base/: configmap-signalilo.yaml  kustomization.yaml  serviceaccount.yaml
deploy/charts/scrubbed/: Chart.yaml  README.md  values.yaml
deploy/charts/scrubbed/ci/: default-values.yaml
deploy/charts/scrubbed/templates/: _helpers.tpl  configmap-scrubbed.yaml  configmap-signalilo.yaml  deployment.yaml  secret-signalilo.yaml  service-signalilo.yaml  service.yaml  serviceaccount.yaml
deploy/kustomize/base/: configmap-scrubbed.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
deploy/kustomize/overlays/example/: kustomization.yaml
deploy/kustomize/overlays/standalone/: kustomization.yaml
deploy/kustomize/overlays/with-signalilo/: configmap-signalilo.yaml  deployment-patch.yaml  kustomization.yaml  secret-signalilo.yaml  service-patch.yaml
deploy/overlays/example/: configmap-signalilo-patch.yaml  namespace.yaml  secret-signalilo.yaml
scrubbed/: main.py
tests/: test_webhook.py
